[package]
name = "synthlang"
version = "0.2.0"
authors = ["Rob Parrett <rob.parrett@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = { version="0.7", features=["wasm-bindgen"] }
rand_pcg = "0.2"

[dev-dependencies]

heck = "0.3"
